<resources>
    <string name="app_name">Bytes</string>
    <string name="title_root_detected">Device probably rooted!</string>
    <string name="message_root_detected">Unfortunately, rooted devices are not supported. Closing the app.</string>
    <string name="network_information">Network information</string>
    <string name="Bytes">Bytes</string>
    <string name="ready_to_connect">Ready to connect?</string>
    <string name="nice_wording">Some really nice wording</string>
    <string name="sell">PROVIDE ACCESS</string>
    <string name="connect">GET ACCESS</string>
    <string name="activity">Activity</string>
    <string name="turn_on_hotspot">Turn on your hotspot</string>
    <string name="change_hotspot_address">Change your hotspot address</string>
    <string name="change_hotspot_address_to_default_address">Change your hotspot address to the default address</string>
    <string name="connected_to_server">Connected to the server</string>
    <string name="new_client_connected">New client connected</string>
    <string name="connection_failed">Connection failed</string>
    <string name="connection_of_client_failed">Connection of client failed</string>
    <string name="stop_selling">STOP SELLING</string>
    <string name="disconnect">STOP BUYING</string>
    <string name="connection_of_server_closed">The connection of the server with a client has been closed</string>
    <string name="connection_closed">Connection closed</string>
    <string name="connection_of_client_closed">The connection of the client is closed</string>
    <string name="connection_not_found">Wifi not found</string>
    <string name="connection_cannot_be_found">A Wifi cannot be found</string>
    <string name="not_connected_to_internet">Not connected to internet</string>
    <string name="you_are_not_connected_to_internet">You are not connected to internet</string>
    <string name="buying">Buying</string>
    <string name="settings">Settings</string>
    <string name="sell_data">PROVIDE ACCESS</string>
    <string name="buy_data">GET ACCESS</string>
    <string name="check_your_wallet">CHECK YOUR WALLET</string>
    <string name="selling">Selling</string>
    <string name="title_activity_payment">Payment</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_buyer">Settings-Buyer</string>
    <string name="title_activity_seller">Settings-Seller</string>
    <string name="tab_text_1">Credit Card</string>
    <string name="tab_text_2">Crypto</string>
    <string name="tab_text_3">History</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="withdrawal_confirmation">Withdrawal confirmation</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="history">History</string>
    <string name="generate_seed">Seed Generated</string>
    <string name="message_generate_seed">Keep it secure and don\'t share it with anyone. If someone has access to your seed they can control your funds.</string>
    <string name="buttons_ok">OK</string>
    <string name="buttons_cancel">CANCEL</string>
    <string name="seed">Seed:</string>
    <string name="messages_invalid_characters_seed">Your seed contains invalid characters. Only uppercase characters from A-Z and the number 9 are accepted.</string>
    <string name="messages_seed_to_long">Your seed is also too long.</string>
    <string name="messages_seed_to_short">Your seed is also too short.</string>
    <string name="messages_mixed_seed">Your seed contains mixed case characters. Lowercase is converted to uppercase.</string>
    <string name="messages_to_long_seed">Your seed should not contain more than 81 characters. Extra characters are ignored.</string>
    <string name="messages_to_short_seed">Your seed does not contain enough characters. This is not secure.</string>
    <string name="messages_invalid_seed">Please enter a valid seed.</string>
    <string name="messages_invalid_email">Please enter a valid email.</string>
    <string name="buttons_login">Login</string>
</resources>
